Update dependencies and import statements

--- a/1-Introduction-to-Python/1-Variables.ipynb
+++ b/1-Introduction-to-Python/1-Variables.ipynb
@@ -125,11 +125,11 @@
    "metadata": {},
    "source": [
     "### 1.1 Exercises:\n",
-    "Before any exercise, import the `Correction` module which allows you to check out the correction of the exercises the following way:\n",
+    "Before any exercise, import the `answer` function which allows you to check out the correction of the exercises the following way:\n",
     "```python\n",
-    "Correction(<exo_num>)\n",
+    "answer(<exo_num>)\n",
     "```\n",
-    "You can import the function as shown just below. It needs to be imported only once."
+    "You can import the function as shown just below. It needs to be imported only once for each notebook"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Resources.Answers import answer"
+    "from centuri_course import answer"
    ]
   },
   {
@@ -190,9 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import (\n",
-    "    randint,\n",
-    ")  # To generate random numbers so you can't really cheat\n",
+    "from random import randint  # To generate random numbers so you can't really cheat\n",
     "\n",
     "nb1 = randint(0, 5)\n",
     "nb2 = randint(6, 10)\n",
@@ -224,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
