--- a/1-Introduction-to-Python/4-Some-Exercises.ipynb
+++ b/1-Introduction-to-Python/4-Some-Exercises.ipynb
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint"
+    "from centuri_course.utils import da_alone, plot_concentration_1cell\n",
+    "from centuri_course import answer, hint, answer_results"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "??da_alone"
+    "da_alone??"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
