--- a/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
+++ b/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
@@ -60,8 +60,8 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint\n",
+    "from centuri_course.utils import get_random_table, plot_concentration_1cell, plot_concentration_1D\n",
+    "from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
