--- a/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
+++ b/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
@@ -105,8 +105,8 @@
     "# Usual reloading of all the previous libraries etc.\n",
     "\n",
     "import numpy as np\n",
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint\n",
+    "from centuri_course import plot_concentration_1D\n",
+    "from centuri_course import answer, hint, answer_results\n",
     "\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
