--- a/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
+++ b/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
@@ -42,8 +42,8 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint\n",
+    "from centuri_course.utils import *\n",
+    "from centuri_course import answer, hint\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
