--- a/1-Introduction-to-Python/5-0-Introduction-function.ipynb
+++ b/1-Introduction-to-Python/5-0-Introduction-function.ipynb
@@ -96,8 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint"
+    "from centuri_course.utils import plot_concentration_1cell\n",
+    "from centuri_course import answer, hint"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
