--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint\n",
+    "from centuri_course.utils import *\n",
+    "from centuri_course import answer, hint\n",
     "\n",
     "# Carry over here the previously declared variables and the code from the previous exercises\n",
     "mu_a = 2.8e-4\n",
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
