Update Python version and import statements

--- a/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
+++ b/2-Data-handling-and-visu/03-04-Figures-and-Subplots.ipynb
@@ -134,13 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do that here\n",
-    "fig, ax = plt.subplots(figsize=(6, 5))\n",
-    "ax.plot(X, Y, label=\"legend\")\n",
-    "ax.plot(X + 0.5, Y, label=\"legend2\")\n",
-    "ax.set_xlabel(\"X label\")\n",
-    "ax.set_ylabel(\"Y label\")\n",
-    "ax.legend()"
+    "# Do that here"
    ]
   },
   {
@@ -338,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
