--- a/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
+++ b/2-Data-handling-and-visu/07-08-Saving-and-Color-maps.ipynb
@@ -174,7 +174,7 @@
    "outputs": [],
    "source": [
     "np.random.seed(1)\n",
-    "from Resources.UsefulFunctions import build_curve\n",
+    "from centuri_course.utils import build_curve\n",
     "\n",
     "?build_curve"
    ]
