--- a/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
+++ b/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
@@ -39,8 +39,8 @@
     "from scipy.ndimage import convolve\n",
     "\n",
     "# importing the useful functions\n",
-    "from Resources.UsefulFunctions import *\n",
-    "from Resources.Answers import answer, hint\n",
+    "from centuri_course.utils import *\n",
+    "from centuri_course import answer, hint\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
