--- a/2-Data-handling-and-visu/12-Animations.ipynb
+++ b/2-Data-handling-and-visu/12-Animations.ipynb
@@ -185,7 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run Resources/rain.py\n",
+    "from IPython.display import HTML\n",
+    "from centuri_course.rain import run_rain\n",
+    "anim = run_rain()\n",
     "HTML(anim.to_jshtml())"
    ]
   }
@@ -206,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
