--- a/2-Data-handling-and-visu/05-06-Styles-and-Aesthetics.ipynb
+++ b/2-Data-handling-and-visu/05-06-Styles-and-Aesthetics.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with plt.style.context(\"seaborn-paper\"):\n",
+    "with plt.style.context(\"seaborn-v0_8-paper\"):\n",
     "    X1 = np.linspace(0, 2 * np.pi)\n",
     "    X2 = np.linspace(0, 2 * np.pi)\n",
     "    Y1 = np.sin(X1 * 2) / 2\n",
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with plt.style.context(\"seaborn-poster\"):\n",
+    "with plt.style.context(\"seaborn-v0_8-poster\"):\n",
     "    X1 = np.linspace(0, 2 * np.pi)\n",
     "    X2 = np.linspace(0, 2 * np.pi)\n",
     "    Y1 = np.sin(X1 * 2) / 2\n",
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.library[\"seaborn-poster\"]"
+    "plt.style.library[\"seaborn-v0_8-poster\"]"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
