--- a/1-Introduction-to-Python/1-Variables.ipynb
+++ b/1-Introduction-to-Python/1-Variables.ipynb
@@ -190,7 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import randint  # To generate random numbers so you can't really cheat\n",
+    "from random import (\n",
+    "    randint,\n",
+    ")  # To generate random numbers so you can't really cheat\n",
     "\n",
     "nb1 = randint(0, 5)\n",
     "nb2 = randint(6, 10)\n",
