--- a/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
+++ b/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
@@ -60,7 +60,11 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "from centuri_course.utils import get_random_table, plot_concentration_1cell, plot_concentration_1D\n",
+    "from centuri_course.utils import (\n",
+    "    get_random_table,\n",
+    "    plot_concentration_1cell,\n",
+    "    plot_concentration_1D,\n",
+    ")\n",
     "from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
     "\n",
     "# and carrying over the previously declared variables\n",
