--- a/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
+++ b/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
@@ -362,8 +362,7 @@
     "\n",
     "\n",
     "# Write the function here:\n",
-    "def compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy, seed=0):\n",
-    "    ...\n",
+    "def compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy, seed=0): ...\n",
     "\n",
     "\n",
     "# A, I = compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy)"
