Fix import errors and update code

--- a/1-Introduction-to-Python/4-Some-Exercises.ipynb
+++ b/1-Introduction-to-Python/4-Some-Exercises.ipynb
@@ -47,8 +47,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from centuri_course.utils import da_alone, plot_concentration_1cell\n",
-    "from centuri_course import answer, hint, answer_results"
+    "try:\n",
+    "    from centuri_course.utils import da_alone, da, di, plot_concentration_1cell\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course.utils import da_alone, da, di, plot_concentration_1cell\n",
+    "    from centuri_course import answer, hint, answer_results"
    ]
   },
   {
@@ -126,7 +131,7 @@
     "a = 0.01\n",
     "# Write here the code necessary\n",
     "print(f\"{a                            = }\")\n",
-    "print(\"Expected value (for a = 0.1) : 0.9971706727639877\")"
+    "print(\"Expected value (for a = 0.01) : 0.9971706727639877\")"
    ]
   },
   {
