--- a/1-Introduction-to-Python/5-0-Introduction-function.ipynb
+++ b/1-Introduction-to-Python/5-0-Introduction-function.ipynb
@@ -96,8 +96,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from centuri_course.utils import plot_concentration_1cell\n",
-    "from centuri_course import answer, hint"
+    "try:\n",
+    "    from centuri_course.utils import plot_concentration_1cell, da, di\n",
+    "    from centuri_course import answer, hint\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course.utils import plot_concentration_1cell, da, di\n",
+    "    from centuri_course import answer, hint"
    ]
   },
   {
@@ -144,15 +149,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_AI():  # Don't forget to add arguments\n",
-    "    # A, I = [a], [i]\n",
-    "    A, I = [], []\n",
+    "def compute_AI(a, i, dt, k, tau, n):  # Don't forget to add arguments\n",
+    "    A, I = [a], [i]\n",
     "    # Uncoment above and\n",
     "    # Do something here\n",
     "    return A, I\n",
     "\n",
-    "\n",
-    "A, I = compute_AI()\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
+    "T = 9.0\n",
+    "dt = 0.001\n",
+    "n = int(T / dt)\n",
+    "A, I = compute_AI(.4, .15, dt, k, tau, n)\n",
     "plot_concentration_1cell(A, I)"
    ]
   },
