--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -58,8 +58,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from centuri_course.utils import *\n",
-    "from centuri_course import answer, hint\n",
+    "try:\n",
+    "    from centuri_course.utils import plot_concentration_1cell, da, di\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf4de50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Carry over here the previously declared variables and the code from the previous exercises\n",
     "mu_a = 2.8e-4\n",
@@ -73,15 +85,20 @@
     "n = int(T / dt)\n",
     "\n",
     "\n",
-    "def compute_AI():  # Don't forget to add arguments\n",
-    "    # A, I = [a], [i]\n",
-    "    A, I = [0], [0]\n",
+    "def compute_AI(a, i, dt, k, tau, n):  # Don't forget to add arguments\n",
+    "    A, I = [a], [i]\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        a, i = A[-1] + da(A[-1], I[-1], dt, k), I[-1] + di(I[-1], A[-1], dt, tau)\n",
+    "        A.append(a)\n",
+    "        I.append(i)\n",
+    "\n",
     "    # Uncoment above and\n",
     "    # Do something here\n",
     "    return A, I\n",
     "\n",
     "\n",
-    "A, I = compute_AI()"
+    "A, I = compute_AI(.4, .15, dt, k, tau, n)"
    ]
   },
   {
@@ -227,7 +244,7 @@
     "folder = Path(\"question_7\")\n",
     "for test_tau in np.linspace(0.05, 1, 5):\n",
     "    for test_k in np.linspace(-1, 1, 5):\n",
-    "        #         A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
+    "        A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
     "        plot_concentration_1cell(\n",
     "            A, I, save_path=folder / f\"k{test_k}_tau{test_tau}.png\"\n",
     "        )"
