--- a/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
+++ b/1-Introduction-to-Python/6-2-Adding-lateral-diffusion.ipynb
@@ -105,9 +105,23 @@
     "# Usual reloading of all the previous libraries etc.\n",
     "\n",
     "import numpy as np\n",
-    "from centuri_course import plot_concentration_1D\n",
-    "from centuri_course import answer, hint, answer_results\n",
     "\n",
+    "try:\n",
+    "    from centuri_course import plot_concentration_1D\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course import plot_concentration_1D\n",
+    "    from centuri_course import answer, hint, answer_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274226f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
     "tau = 0.1\n",
@@ -131,13 +145,11 @@
     "np.random.seed(1)\n",
     "I = np.random.random(100)\n",
     "\n",
-    "\n",
     "def dA_I(A, I, dt, k, tau, dx, mu_a, mu_i):\n",
     "    new_A = np.zeros_like(A)\n",
     "    new_I = np.zeros_like(I)\n",
-    "    # Do something here\n",
+    "    # Global solution\n",
     "    return new_A, new_I\n",
-    "\n",
     "\n",
     "new_A, new_I = dA_I(A, I, dt=dt, k=k, tau=tau, dx=dx, mu_a=mu_a, mu_i=mu_i)"
    ]
@@ -153,7 +165,6 @@
     "A_ans, I_ans = answer_results(\n",
     "    14, A=A, I=I, dt=dt, k=k, tau=tau, dx=dx, mu_a=mu_a, mu_i=mu_i\n",
     ")\n",
-    "\n",
     "if np.alltrue(A_ans == new_A) and np.alltrue(I_ans == new_I):\n",
     "    print(\"My results are the same as what is expected\")\n",
     "elif np.allclose(A_ans, new_A) and np.allclose(I_ans, new_I):\n",
@@ -190,16 +201,7 @@
     "\n",
     "for t in range(1, n):\n",
     "    # do what is necessary\n",
-    "    A[:, t], I[:, t] = dA_I(\n",
-    "        A[:, t - 1],\n",
-    "        I[:, t - 1],\n",
-    "        dt=dt,\n",
-    "        k=k,\n",
-    "        tau=tau,\n",
-    "        dx=dx,\n",
-    "        mu_a=mu_a,\n",
-    "        mu_i=mu_i,\n",
-    "    )"
+    "    ..."
    ]
   },
   {
@@ -237,16 +239,7 @@
     "\n",
     "for t in range(1, n):\n",
     "    # do what is necessary\n",
-    "    A[:, t], I[:, t] = dA_I(\n",
-    "        A[:, t - 1],\n",
-    "        I[:, t - 1],\n",
-    "        dt=0.01,\n",
-    "        k=0.05,\n",
-    "        tau=2,\n",
-    "        dx=0.0005,\n",
-    "        mu_a=mu_a,\n",
-    "        mu_i=mu_i,\n",
-    "    )\n",
+    "    ...\n",
     "plot_concentration_1D(A, step=100)"
    ]
   },
