--- a/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
+++ b/1-Introduction-to-Python/7-From-1D-to-2D.ipynb
@@ -42,9 +42,14 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "from centuri_course.utils import *\n",
-    "from centuri_course import answer, hint\n",
-    "\n",
+    "try:\n",
+    "    # from centuri_course.utils import *\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    # from centuri_course.utils import *\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "    \n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
@@ -275,6 +280,7 @@
     "## Here you write the function\n",
     "def diffusion(arr, nb_neighbs, kernel, mu, dx, dy):\n",
     "    arr_diff = np.zeros_like(arr)\n",
+    "    ...\n",
     "    return arr_diff"
    ]
   },
@@ -362,8 +368,8 @@
     "\n",
     "\n",
     "# Write the function here:\n",
-    "def compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy, seed=0): ...\n",
-    "\n",
+    "def compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy, seed=0):\n",
+    "    ...\n",
     "\n",
     "# A, I = compute_turing(dt, k, tau, size, T, mu_a, mu_i, dx, dy)"
    ]
@@ -454,8 +460,7 @@
     "    ax.imshow(A[..., int(i * n / nb_TP)])\n",
     "    ax.set_axis_off()\n",
     "    ax.set_title(f\"Time {int(i*n/nb_TP)*dt}\")\n",
-    "fig.tight_layout()\n",
-    "# int(nb_TP**.5)"
+    "fig.tight_layout()"
    ]
   },
   {
