--- a/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
+++ b/1-Introduction-to-Python/8-Playing-with-the-model.ipynb
@@ -39,8 +39,11 @@
     "from scipy.ndimage import convolve\n",
     "\n",
     "# importing the useful functions\n",
-    "from centuri_course.utils import *\n",
-    "from centuri_course import answer, hint\n",
+    "try:\n",
+    "    from centuri_course import answer, hint, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course import answer, hint, answer_results\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
@@ -86,6 +89,7 @@
    "outputs": [],
    "source": [
     "from matplotlib import animation\n",
+    "from matplotlib import pyplot as plt\n",
     "from IPython.display import HTML\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
