--- a/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
+++ b/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
@@ -60,12 +60,21 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "from centuri_course.utils import (\n",
-    "    get_random_table,\n",
-    "    plot_concentration_1cell,\n",
-    "    plot_concentration_1D,\n",
-    ")\n",
-    "from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
+    "try: \n",
+    "    from centuri_course.utils import (\n",
+    "        get_random_table,\n",
+    "        plot_concentration_1cell,\n",
+    "        plot_concentration_1D,\n",
+    "    )\n",
+    "    from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course.utils import (\n",
+    "        get_random_table,\n",
+    "        plot_concentration_1cell,\n",
+    "        plot_concentration_1D,\n",
+    "    )\n",
+    "    from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
@@ -127,7 +136,7 @@
     "# It helps making sure that you are actually\n",
     "# slincing in the correct position in the array\n",
     "out = get_random_table(100, 900)\n",
-    "spliced_out = out[-3:, :4]\n",
+    "spliced_out = out\n",
     "print(f\"your spliced_out -->\\n{spliced_out}\\n\")\n",
     "print(\n",
     "    f\"\"\"expected spliced_out -->\n",
@@ -405,7 +414,10 @@
     "np.random.seed(1)\n",
     "I[:, 0] = np.random.random(100)\n",
     "\n",
-    "# Do it here"
+    "# Do it here\n",
+    "# for i in range(n-1):\n",
+    "for i in range(size):\n",
+    "    A[i], I[i] = compute_AI(A[i, 0], I[i, 0], dt, k, tau, n)"
    ]
   },
   {
