Add import fallback for centuri_course module

--- a/1-Introduction-to-Python/1-Variables.ipynb
+++ b/1-Introduction-to-Python/1-Variables.ipynb
@@ -139,7 +139,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from centuri_course import answer"
+    "try:\n",
+    "    from centuri_course import answer\n",
+    "except ImportError:\n",
+    "    %pip install centuri_course\n",
+    "    from centuri_course import answer"
    ]
   },
   {
