--- a/1-Introduction-to-Python/5-0-Introduction-function.ipynb
+++ b/1-Introduction-to-Python/5-0-Introduction-function.ipynb
@@ -155,12 +155,13 @@
     "    # Do something here\n",
     "    return A, I\n",
     "\n",
+    "\n",
     "tau = 0.1\n",
     "k = -0.005\n",
     "T = 9.0\n",
     "dt = 0.001\n",
     "n = int(T / dt)\n",
-    "A, I = compute_AI(.4, .15, dt, k, tau, n)\n",
+    "A, I = compute_AI(0.4, 0.15, dt, k, tau, n)\n",
     "plot_concentration_1cell(A, I)"
    ]
   },
