--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -72,7 +72,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Carry over here the previously declared variables and the code from the previous exercises\n",
     "mu_a = 2.8e-4\n",
     "mu_i = 5e-3\n",
@@ -89,7 +88,9 @@
     "    A, I = [a], [i]\n",
     "\n",
     "    for _ in range(n):\n",
-    "        a, i = A[-1] + da(A[-1], I[-1], dt, k), I[-1] + di(I[-1], A[-1], dt, tau)\n",
+    "        a, i = A[-1] + da(A[-1], I[-1], dt, k), I[-1] + di(\n",
+    "            I[-1], A[-1], dt, tau\n",
+    "        )\n",
     "        A.append(a)\n",
     "        I.append(i)\n",
     "\n",
@@ -98,7 +99,7 @@
     "    return A, I\n",
     "\n",
     "\n",
-    "A, I = compute_AI(.4, .15, dt, k, tau, n)"
+    "A, I = compute_AI(0.4, 0.15, dt, k, tau, n)"
    ]
   },
   {
@@ -244,7 +245,9 @@
     "folder = Path(\"question_7\")\n",
     "for test_tau in np.linspace(0.05, 1, 5):\n",
     "    for test_k in np.linspace(-1, 1, 5):\n",
-    "        A, I = answer_results(4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n)\n",
+    "        A, I = answer_results(\n",
+    "            4, A=0.4, I=0.15, dt=dt, k=test_k, tau=test_tau, n=n\n",
+    "        )\n",
     "        plot_concentration_1cell(\n",
     "            A, I, save_path=folder / f\"k{test_k}_tau{test_tau}.png\"\n",
     "        )"
