--- a/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
+++ b/1-Introduction-to-Python/6-1-From-0D-to-1D.ipynb
@@ -60,13 +60,18 @@
     "import numpy as np\n",
     "\n",
     "# importing the useful functions\n",
-    "try: \n",
+    "try:\n",
     "    from centuri_course.utils import (\n",
     "        get_random_table,\n",
     "        plot_concentration_1cell,\n",
     "        plot_concentration_1D,\n",
     "    )\n",
-    "    from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
+    "    from centuri_course import (\n",
+    "        answer,\n",
+    "        hint,\n",
+    "        retrieve_compute_AI,\n",
+    "        answer_results,\n",
+    "    )\n",
     "except ImportError:\n",
     "    %pip install centuri_course\n",
     "    from centuri_course.utils import (\n",
@@ -74,7 +79,12 @@
     "        plot_concentration_1cell,\n",
     "        plot_concentration_1D,\n",
     "    )\n",
-    "    from centuri_course import answer, hint, retrieve_compute_AI, answer_results\n",
+    "    from centuri_course import (\n",
+    "        answer,\n",
+    "        hint,\n",
+    "        retrieve_compute_AI,\n",
+    "        answer_results,\n",
+    "    )\n",
     "\n",
     "# and carrying over the previously declared variables\n",
     "mu_a = 2.8e-4\n",
