--- a/1-Introduction-to-Python/1-Variables.ipynb
+++ b/1-Introduction-to-Python/1-Variables.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "831989c5",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e31c1885",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print = <built-in function print>\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"{a_number = }\")"
+    "print(f\"{print = }\")"
    ]
   },
   {
@@ -81,16 +89,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fb6fb574",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "another_number = 5\n",
+      "a_number = 6\n"
+     ]
+    }
+   ],
    "source": [
     "a_number = 5\n",
     "another_number = a_number\n",
-    "a_number = 1\n",
+    "a_number += 1\n",
     "print(f\"{another_number = }\")\n",
     "print(f\"{a_number = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6cab3e75-5b73-46af-a801-ffa09094bb00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l2 = [1, 2, 3]\n",
+      "l1 = [1, 2, 3, 4]\n",
+      "l2 = [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3]\n",
+    "l2 = l1\n",
+    "print(f\"{l2 = }\")\n",
+    "l1.append(4)\n",
+    "print(f\"{l1 = }\")\n",
+    "print(f\"{l2 = }\")"
    ]
   },
   {
@@ -106,10 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9916108b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nb1 = 1\n",
+      "nb2 = 3\n",
+      "sum_nb1_2 = 4\n"
+     ]
+    }
+   ],
    "source": [
     "nb1 = 1\n",
     "nb2 = 3\n",
@@ -134,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "61b43c36",
    "metadata": {},
    "outputs": [],
@@ -153,7 +205,7 @@
    "source": [
     "#### Exercise 1\n",
     "Set the value of the variables necessary for the model as follow:\n",
-    "- mu_a: 0.0002.8\n",
+    "- mu_a: 0.00028\n",
     "- mu_i: 0.005\n",
     "- tau: 0.1\n",
     "- k: -0.005\n",
@@ -167,13 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4e33ad64",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Write the answer of the previous question here.\n",
-    "# You can check the answer by running answer(1)"
+    "mu_a = 0.00028\n",
+    "mu_i = 0.005\n",
+    "tau = 0.1\n",
+    "k = -0.005\n",
+    "size = 100\n",
+    "dx = 2 / size\n",
+    "dy = 2 / size\n",
+    "T = 9\n",
+    "dt = 0.001\n",
+    "n = T / dt"
    ]
   },
   {
@@ -189,23 +250,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f12a5734",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before\n",
+      "nb1 = 5\n",
+      "nb2 = 7\n",
+      "after:\n",
+      "nb1 = 7\n",
+      "nb2 = 5\n"
+     ]
+    }
+   ],
    "source": [
     "from random import (\n",
     "    randint,\n",
-    ")  # To generate random numbers so you can't really cheat\n",
+    ") # To generate random numbers so you can't really cheat\n",
     "\n",
     "nb1 = randint(0, 5)\n",
     "nb2 = randint(6, 10)\n",
+    "\n",
     "print(\"before\")\n",
     "print(f\"{nb1 = }\")\n",
     "print(f\"{nb2 = }\")\n",
     "\"\"\"\n",
-    "To do: swap a and b values\n",
+    "To do: swap nb1 and nb2 values\n",
     "\"\"\"\n",
+    "nb1 = nb2 + nb1\n",
+    "nb2 = nb1 - nb2\n",
+    "nb1 = nb1 - nb2\n",
     "print(\"after:\")\n",
     "print(f\"{nb1 = }\")\n",
     "print(f\"{nb2 = }\")"
