--- a/1-Introduction-to-Python/3-Conditional-Statements-Loops.ipynb
+++ b/1-Introduction-to-Python/3-Conditional-Statements-Loops.ipynb
@@ -40,10 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e36864b3",
+   "execution_count": 4,
+   "id": "a2168851-5b27-4f40-bf40-6ce90bdbbf8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is not equal to 2\n"
+     ]
+    }
+   ],
    "source": [
     "a_number = eval(input(\"Please enter a number and press enter: \"))\n",
     "if a_number == 2:\n",
@@ -70,10 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "741c4e3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is larger or equal to 10\n"
+     ]
+    }
+   ],
    "source": [
     "a_number = eval(input(\"Please enter a number and press enter: \"))\n",
     "if a_number < 2:\n",
@@ -98,10 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e28befeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_number --> Strictly smaller than 10\n"
+     ]
+    }
+   ],
    "source": [
     "previous_number = eval(input(\"Please enter a number and press enter: \"))\n",
     "a_number = 1 if 10 <= previous_number else \"Strictly smaller than 10\"\n",
@@ -147,10 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "812075de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, how are you? "
+     ]
+    }
+   ],
    "source": [
     "words = [\"Hello,\", \"how\", \"are\", \"you?\"]\n",
     "for w in words:\n",
@@ -169,10 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5db9f020",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, how are you? "
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < len(words):\n",
@@ -192,10 +232,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9a591f35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 8, number_sum = 36\n",
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "stopping_value = 35\n",
     "i = 0\n",
@@ -203,7 +252,15 @@
     "while number_sum < stopping_value:\n",
     "    i += 1\n",
     "    number_sum += i\n",
-    "print(f\"{i = }, {number_sum = }\")"
+    "print(f\"{i = }, {number_sum = }\")\n",
+    "\n",
+    "l1 = [1, 2, 3, 4]\n",
+    "for i in range(len(l1)):\n",
+    "    l1[i] = l1[i] + 1\n",
+    "print(l1)\n",
+    "import numpy as np\n",
+    "l1 = np.array([1, 2, 3, 4])\n",
+    "l1 = l1 + 1"
    ]
   },
   {
