--- a/1-Introduction-to-Python/5-1-File-manipulation.ipynb
+++ b/1-Introduction-to-Python/5-1-File-manipulation.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "75b06d7d",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "faf4de50",
    "metadata": {},
    "outputs": [],
@@ -104,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9d50f8b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_a0.4_i0.15_dt0.001\n",
+      "test_a{A[0]}_i{I[0]}_dt{dt}\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = f\"test_a{A[0]}_i{I[0]}_dt{dt}\"\n",
     "s2 = \"test_a{A[0]}_i{I[0]}_dt{dt}\"\n",
@@ -140,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c484937e",
    "metadata": {},
    "outputs": [],
@@ -150,6 +159,28 @@
     "folder = Path(\"question_7\")\n",
     "if not folder.exists():\n",
     "    Path.mkdir(folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d6198333-49f6-4382-9159-8a7a4231995c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/leo.guignard/dvlp/MidJourney/Muhammad Ansar et al 2019.png\n",
+      "/Users/leo.guignard/dvlp/MidJourney/g_leo_an_integrated_view_of_the_cosmos_with_many_stars_and_colo_2a655675-642d-4d17-b2b9-eb1f99b02765.png\n",
+      "/Users/leo.guignard/dvlp/MidJourney/g_leo_a_man_walking_a_tortuous_path_made_of_computer_parts_an_a7914e7d-3147-40ef-b85a-9184f5dc20ca_3.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = Path(\"/Users/leo.guignard/dvlp/MidJourney/\")\n",
+    "for i in p.glob(\"*.png\"):\n",
+    "    print(i)"
    ]
   },
   {
@@ -175,10 +206,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "112df024",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our current path:\n",
+      "/Users/leo.guignard/Courses/CenTuri-Course-1/1-Introduction-to-Python\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Our current path:\")\n",
     "print(Path.cwd())"
@@ -205,10 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "86dfab72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "question_7/test_a0.4_i0.15_dt0.001.png\n",
+      "question_7/test_a0.4_i0.15_dt0.001.png\n"
+     ]
+    }
+   ],
    "source": [
     "## folder is the path previously created\n",
     "# Concatenation of two Paths\n",
