--- a/1-Introduction-to-Python/2-Data-Structures.ipynb
+++ b/1-Introduction-to-Python/2-Data-Structures.ipynb
@@ -52,10 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "661a5403",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1      = [1, 2, 3, 4]\n",
+      "positions: 0  1  2  3\n",
+      "l1[0] = 1\n",
+      "l1[3] = 4\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
     "print(f\"{l1      = }\")\n",
@@ -74,10 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3cbac8a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1       = [1, 2, 3, 4]\n",
+      "positions: -4 -3 -2 -1\n",
+      "l1[-1] = 4\n",
+      "l1[-3] = 2\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{l1       = }\")\n",
     "print(f\"positions: -4 -3 -2 -1\")\n",
@@ -101,10 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f89861d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1          = [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+      "positions --> [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "l1[3:7]     = [6, 7, 8, 9]\n",
+      "l1[:2]      = [3, 4]\n",
+      "l1[6:]      = [9, 10, 11, 12]\n",
+      "l1[1:7:2]   = [4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = list(range(3, 13))\n",
     "print(f\"{l1          = }\")\n",
@@ -125,10 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8a3ea59f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1    = [1, 2, 3, 4]\n",
+      "l1    = [1, 2, 3, 4, 'hello']\n",
+      "l1[4] = 'hello'\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
     "print(f\"{l1    = }\")\n",
@@ -147,10 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2e22bcb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1 = [1, 2, 3, 4]\n",
+      "l1 = [1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
     "print(f\"{l1 = }\")\n",
@@ -168,10 +222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1785e3b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1 = [4, 5, 6, 7]\n",
+      "l1 = [4, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [4, 5, 6, 7]\n",
     "print(f\"{l1 = }\")\n",
@@ -189,10 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d15b396a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1 = [1, 2, 3, 4]\n",
+      "l1 = [1, 3, 3, 4]\n",
+      "l1 = [1, 3, 2, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
     "print(f\"{l1 = }\")\n",
@@ -200,6 +273,29 @@
     "print(f\"{l1 = }\")\n",
     "l1[2] = l1[0] + 1\n",
     "print(f\"{l1 = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5911daee-961a-4730-aaad-4101ed4a385b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 'hello']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3, 4]\n",
+    "l1.insert(10, \"hello\")\n",
+    "l1"
    ]
   },
   {
@@ -214,19 +310,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "d0ced940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1 = [1, 2, 3, 4, ([1, 2, 3], 'b', 'c', 'd')]\n",
+      "([1, 3, 3], 'b', 'c', 'd')\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1, 2, 3, 4]\n",
-    "l2 = [\"a\", \"b\", \"c\", \"d\"]\n",
-    "l3 = l1 + l2\n",
-    "print(f\"{l3 = }\")\n",
-    "l1.extend(l2)\n",
+    "l2 = tuple([[1, 2, 3], \"b\", \"c\", \"d\"])\n",
+    "# l3 = l1 + l2\n",
+    "# print(f\"{l3 = }\")\n",
+    "l1.append(l2)\n",
     "print(f\"{l1 = }\")\n",
-    "l4 = l1 + l2\n",
-    "print(f\"{l4 = }\")"
+    "# l2.append(1)\n",
+    "# print(f\"{l1 = }\")\n",
+    "# l4 = l1 + l2\n",
+    "# print(f\"{l4 = }\")"
    ]
   },
   {
@@ -242,15 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "748d4cc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1[\"3\"] = 'Hello'\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = {4: \"1\", \"3\": \"Hello\"}\n",
-    "print(f\"{d1      = }\")\n",
-    "print(f\"{d1[4]   = }\")\n",
-    "print(f\"{d1['3'] = }\")"
+    "# print(f\"{d1      = }\")\n",
+    "# print(f\"{d1[4]   = }\")\n",
+    "print(f'{d1[\"3\"] = }')\n"
    ]
   },
   {
@@ -263,10 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "0ce51435",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 = {1: [1, 2, 3, 4], 4: 4}\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = {1: [1, 2, 3, 4], 4: 4}\n",
     "print(f\"{d1 = }\")"
@@ -274,15 +397,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "56419211",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m d1 \u001b[38;5;241m=\u001b[39m {[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m]: \u001b[38;5;241m1\u001b[39m}\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
-    "try:\n",
-    "    d1 = {[1, 2]: 1}\n",
-    "except Exception as e:\n",
-    "    print(f\"The error was:\\n\\t{e}\")"
+    "d1 = {[1, 2]: 1}"
    ]
   },
   {
@@ -295,10 +427,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "982d5c84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 = {1: [1, 2, 3, 4], 4: 4}\n",
+      "d1 = {1: [1, 2, 3, 4, 5], 4: 4, 3: 5}\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = {1: [1, 2, 3, 4], 4: 4}\n",
     "print(f\"{d1 = }\")\n",
@@ -337,12 +478,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "2a99ee7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84f04d04-cd60-4a6d-a67d-2c5dfecb9284",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "[1, 2, 3, 4]\n",
+    "[\n",
+    " [1, 2, 3, 4, 5, 6],\n",
+    " [3, 4, 3, 4, 5, 6],\n",
+    " [3, 4, 3, 4, 5, 6],\n",
+    "]"
    ]
   },
   {
@@ -355,13 +522,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "f5a55b28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[1 2 3]\n",
+      " [2 3 4]]\n",
+      "arr2 -->\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "arr3 -->\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.array([[1, 2, 3], [2, 3, 4]])  # Create an array from a list\n",
-    "arr2 = np.zeros((4, 4))  # Create an array filled with 0s of size 4x4\n",
+    "arr2 = np.zeros((4, 4), dtype=int)  # Create an array filled with 0s of size 4x4\n",
     "arr3 = np.arange(10)  # Create a 1d array with values from 0 to 9\n",
     "print(f\"arr1 -->\\n{arr1}\")\n",
     "print(f\"arr2 -->\\n{arr2}\")\n",
@@ -382,10 +566,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "21513145",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "arr1 -->\n",
+      "[[ 2  3  4  5]\n",
+      " [ 6  7  8  9]\n",
+      " [10 11 12 13]\n",
+      " [14 15 16 17]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.arange(16).reshape(4, 4)\n",
     "print(f\"arr1 -->\\n{arr1}\")\n",
@@ -403,14 +604,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "e4dd2c17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[[ 0  1]\n",
+      "  [ 2  3]]\n",
+      "\n",
+      " [[ 4  5]\n",
+      "  [ 6  7]]\n",
+      "\n",
+      " [[ 8  9]\n",
+      "  [10 11]]\n",
+      "\n",
+      " [[12 13]\n",
+      "  [14 15]]]\n",
+      "arr1 (reshape(4,  4)) -->\n",
+      "[[[ 0  1]\n",
+      "  [ 2  3]]\n",
+      "\n",
+      " [[ 4  5]\n",
+      "  [ 6  7]]\n",
+      "\n",
+      " [[ 8  9]\n",
+      "  [10 11]]\n",
+      "\n",
+      " [[12 13]\n",
+      "  [14 15]]]\n",
+      "arr1 (reshape(2, -1)) -->\n",
+      "[[ 0  1  2  3  4  5  6  7]\n",
+      " [ 8  9 10 11 12 13 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.arange(16)\n",
+    "arr1 = arr1.reshape(4, -1, 2)\n",
     "print(f\"arr1 -->\\n{arr1}\")\n",
-    "print(f\"arr1 (reshape(4,  4)) -->\\n{arr1.reshape(4, 4)}\")\n",
+    "print(f\"arr1 (reshape(4,  4)) -->\\n{arr1.reshape(4, -1, 2)}\")\n",
     "print(f\"arr1 (reshape(2, -1)) -->\\n{arr1.reshape(2, -1)}\")"
    ]
   },
@@ -424,10 +660,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "ebff050c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "arr1 * 2 -->\n",
+      "[[ 0  2  4  6]\n",
+      " [ 8 10 12 14]\n",
+      " [16 18 20 22]\n",
+      " [24 26 28 30]]\n",
+      "arr1 ** 2 -->\n",
+      "[[  0   1   4   9]\n",
+      " [ 16  25  36  49]\n",
+      " [ 64  81 100 121]\n",
+      " [144 169 196 225]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.arange(16).reshape(4, 4)\n",
     "print(f\"arr1 -->\\n{arr1}\")\n",
@@ -449,10 +707,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "5cc5c923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "arr2 -->\n",
+      "[[16 17 18 19]\n",
+      " [20 21 22 23]\n",
+      " [24 25 26 27]\n",
+      " [28 29 30 31]]\n",
+      "arr1 * arr2 -->\n",
+      "[[  0  17  36  57]\n",
+      " [ 80 105 132 161]\n",
+      " [192 225 260 297]\n",
+      " [336 377 420 465]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.arange(16).reshape(4, 4)\n",
     "arr2 = np.arange(16, 32).reshape(4, 4)\n",
@@ -476,10 +756,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "2ec20e6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr1 = np.arange(8).reshape(2, 4)\n",
     "arr2 = np.arange(8).reshape(4, 2)\n",
@@ -502,10 +796,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "64187a3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1 -->\n",
+      "[[ 6  1  1  3]\n",
+      " [ 4 -2  5  1]\n",
+      " [ 2  8  7  6]\n",
+      " [ 3  1  9  7]]\n",
+      "\n",
+      "arr1 determinant -->\n",
+      "-1308.9999999999993\n",
+      "\n",
+      "arr1_inv -->\n",
+      "[[ 0.13368984  0.10695187  0.02139037 -0.09090909]\n",
+      " [-0.00229183  0.02673797  0.14820474 -0.12987013]\n",
+      " [-0.12987013  0.18181818  0.06493506 -0.02597403]\n",
+      " [ 0.11000764 -0.28342246 -0.11382735  0.23376623]]\n",
+      "\n",
+      "arr1 . arr1_inv -->\n",
+      "[[ 1.  0.  0. -0.]\n",
+      " [-0.  1.  0.  0.]\n",
+      " [ 0.  0.  1.  0.]\n",
+      " [-0. -0.  0.  1.]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "arr1 = np.array([[6, 1, 1, 3], [4, -2, 5, 1], [2, 8, 7, 6], [3, 1, 9, 7]])\n",
     "print(f\"arr1 -->\\n{arr1}\\n\")\n",
